kind/2-apps-pods-replicaset/tc9-nr-service.yaml
# App Server for the Microservice
# Service Definition
apiVersion: v1
kind: Service
metadata:
  # Service Name: Ex. Catalogue Service
  name: tc9-n-service
  namespace: omega
  labels:
    app: tc9-n-service
spec:
  # Type Cluster IP, Load Balancer, Node Port etc.
  # Cluster IP is Automatically assigned by K8s
  type: ClusterIP
  ports:
  - port: 80
    # Port Exposed by the Container
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    # Instance Labels
    # Ex. Catalogue Service Instances
    app: tc9-n-pod
